--- a/po/ca.po
+++ b/po/ca.po
@@ -2,11 +2,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-20 14:05+0200\n"
+"POT-Creation-Date: 2018-10-02 12:19+0200\n"
 "PO-Revision-Date: 2018-05-23 18:01+0000\n"
 "Last-Translator: David Medina <medipas@gmail.com>\n"
-"Language-Team: Catalan "
-"<https://l10n.opensuse.org/projects/snapper/master/ca/>\n"
+"Language-Team: Catalan <https://l10n.opensuse.org/projects/snapper/master/ca/>\n"
 "Language: ca\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -23,7 +22,8 @@ msgstr "\t--cleanup-algorithm, -c <algo>\tNeteja l'algoritme per a la instantàn
 msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
 msgstr "\t--cleanup-algorithm, -c <algo>\tNeteja l'algoritme per a les instantànies."
 
-msgid "\t--command <command>\tRun command and create pre and post snapshots."
+#, fuzzy
+msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
 msgstr "\t--command <command>\tExecuta l'ordre i crea instantànies pre i post."
 
 msgid "\t--config, -c <name>\t\tSet name of config to use."
@@ -37,6 +37,9 @@ msgstr "\t--description, -d <description>\tDescripció per a instantànies."
 
 msgid "\t--diff-cmd <command>\t\tCommand used for comparing files."
 msgstr "\t--diff-cmd <command>\t\tOrdre per comparar fitxers."
+
+msgid "\t--disable-used-space\t\tDisable showing used space."
+msgstr ""
 
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
 msgstr "\t--extensions, -x <options>\tOpcions extres passades a l'ordre diff."
@@ -249,6 +252,10 @@ msgstr "(Instantània %d.)"
 msgid "ACL error."
 msgstr "Error ACL."
 
+#. TRANSLATORS: symbol for "bytes" (best keep untranslated)
+msgid "B"
+msgstr ""
+
 msgid "Cleanup"
 msgstr "Neteja"
 
@@ -386,6 +393,10 @@ msgstr "Descripció"
 msgid "Detecting filesystem type failed."
 msgstr "Ha fallat la detecció del tipus de sistema de fitxers."
 
+#. TRANSLATORS: symbol for "exbi bytes" (best keep untranslated)
+msgid "EiB"
+msgstr ""
+
 msgid "Empty configdata."
 msgstr "Configdata buit."
 
@@ -412,6 +423,10 @@ msgstr "Error (%s)."
 #, c-format
 msgid "File '%s' not found."
 msgstr "No s'ha trobat el fitxer \"%s\"."
+
+#. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
+msgid "GiB"
+msgstr ""
 
 #, c-format
 msgid "IO Error (%s)."
@@ -457,12 +472,20 @@ msgstr "Invàlid userdata."
 msgid "Key"
 msgstr "Clau"
 
+#. TRANSLATORS: symbol for "kibi bytes" (best keep untranslated)
+msgid "KiB"
+msgstr ""
+
 #, c-format
 msgid "Listing configs failed (%s)."
 msgstr "Ha fallat la llista de configs (%s)."
 
 msgid "Maybe you forgot the delimiter '..' between the snapshot numbers."
 msgstr "Potser heu oblidat el delimitador \"..\" entre els números d'instantània."
+
+#. TRANSLATORS: symbol for "mebi bytes" (best keep untranslated)
+msgid "MiB"
+msgstr ""
 
 #, c-format
 msgid "Missing argument for command option '%s'."
@@ -491,6 +514,10 @@ msgstr "Sense permisos."
 msgid "Opening file '%s' failed."
 msgstr "Ha fallat l'obertura del fitxer '%s'."
 
+#. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
+msgid "PiB"
+msgstr ""
+
 msgid "Post #"
 msgstr "Post #"
 
@@ -511,9 +538,6 @@ msgstr "Error de quota (%s)."
 msgid "Quota failure (%s)."
 msgstr "Fallada de quota (%s)."
 
-msgid "Running in non UTF-8 locale. Setup is unsupported."
-msgstr "Funcionant amb una llengua no UTF-8. No s'admet la configuració."
-
 msgid "See 'man snapper' for further instructions."
 msgstr "Vegeu \"man snapper\" per a més informació."
 
@@ -533,6 +557,10 @@ msgstr "Subvolum"
 
 msgid "The config 'root' does not exist. Likely snapper is not configured."
 msgstr "La config \"root\" no existeix. Potser l'snapper no està configurat."
+
+#. TRANSLATORS: symbol for "tebi bytes" (best keep untranslated)
+msgid "TiB"
+msgstr ""
 
 msgid "Try 'snapper --help' for more information."
 msgstr "Proveu 'snapper --help' per a més informació."
@@ -568,6 +596,9 @@ msgstr "Tipus desconegut d'instantànies."
 #, c-format
 msgid "Use an integer number from %d to %d."
 msgstr "Useu un número enter entre el %d i el %d."
+
+msgid "Used Space"
+msgstr ""
 
 msgid "User"
 msgstr "Usuari"
@@ -622,6 +653,9 @@ msgstr "l'argument root només es pot usar conjuntament amb no-dbus."
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr "ús: snapper [--global-options] <command> [--command-options] [command-arguments]"
+
+#~ msgid "Running in non UTF-8 locale. Setup is unsupported."
+#~ msgstr "Funcionant amb una llengua no UTF-8. No s'admet la configuració."
 
 #~ msgid "Command '%s' does not work without DBus."
 #~ msgstr "L'ordre '%s' no funciona sense DBus."
