--- a/po/hu.po
+++ b/po/hu.po
@@ -4,11 +4,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-20 14:05+0200\n"
+"POT-Creation-Date: 2018-10-02 12:19+0200\n"
 "PO-Revision-Date: 2018-04-26 15:16+0000\n"
 "Last-Translator: Robert Taisz <robert.taisz@emerald.hu>\n"
-"Language-Team: Hungarian "
-"<https://l10n.opensuse.org/projects/snapper/master/hu/>\n"
+"Language-Team: Hungarian <https://l10n.opensuse.org/projects/snapper/master/hu/>\n"
 "Language: hu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -26,7 +25,8 @@ msgstr "\t--cleanup-algorithm, -c <algoritmus>\tPillanatkép tisztítási algori
 msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
 msgstr "\t--cleanup-algorithm, -c <algoritmus>\tKarbantartási algoritmus a pillanatfelvételekhez."
 
-msgid "\t--command <command>\tRun command and create pre and post snapshots."
+#, fuzzy
+msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
 msgstr "\t--command <parancs>\tFuttassa a parancsot és készítsen pillanatképet előtte, majd utána."
 
 msgid "\t--config, -c <name>\t\tSet name of config to use."
@@ -41,6 +41,10 @@ msgstr "\t--description, -d <leírás>\tPillanatfelvételekhez tartozó leírás
 
 msgid "\t--diff-cmd <command>\t\tCommand used for comparing files."
 msgstr "\t--diff-cmd <parancs>\t\tA fájlok összehasonlítására használt parancs."
+
+#, fuzzy
+msgid "\t--disable-used-space\t\tDisable showing used space."
+msgstr "\t--disable-filters\t\tSzűrők letiltása."
 
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
 msgstr "\t--extensions, -x <beállítások>\tA diff parancsnak átadott további beállítások."
@@ -269,6 +273,10 @@ msgstr "(%d. pillanatkép)"
 msgid "ACL error."
 msgstr "ACL-hiba."
 
+#. TRANSLATORS: symbol for "bytes" (best keep untranslated)
+msgid "B"
+msgstr ""
+
 msgid "Cleanup"
 msgstr "Tisztítás"
 
@@ -418,6 +426,10 @@ msgstr "Leírás"
 msgid "Detecting filesystem type failed."
 msgstr "A fájlrendszer típusának felismerése sikertelen."
 
+#. TRANSLATORS: symbol for "exbi bytes" (best keep untranslated)
+msgid "EiB"
+msgstr ""
+
 # SLE12
 msgid "Empty configdata."
 msgstr "Üres konfigurációadat."
@@ -448,6 +460,10 @@ msgstr "Hiba (%s)."
 #, c-format
 msgid "File '%s' not found."
 msgstr "A(z) '%s' fájl nem található."
+
+#. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
+msgid "GiB"
+msgstr ""
 
 #, c-format
 msgid "IO Error (%s)."
@@ -496,12 +512,20 @@ msgstr "Érvénytelen userdata."
 msgid "Key"
 msgstr "Kulcs"
 
+#. TRANSLATORS: symbol for "kibi bytes" (best keep untranslated)
+msgid "KiB"
+msgstr ""
+
 #, c-format
 msgid "Listing configs failed (%s)."
 msgstr "Beállítások listázása sikertelen (%s)."
 
 msgid "Maybe you forgot the delimiter '..' between the snapshot numbers."
 msgstr "Lehet, hogy elfeledkezett a pillanatképek száma közötti '..' elválasztóról."
+
+#. TRANSLATORS: symbol for "mebi bytes" (best keep untranslated)
+msgid "MiB"
+msgstr ""
 
 #, c-format
 msgid "Missing argument for command option '%s'."
@@ -530,6 +554,10 @@ msgstr "Nincs hozzáférés."
 msgid "Opening file '%s' failed."
 msgstr "A(z) '%s' fájl megnyitása sikertelen."
 
+#. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
+msgid "PiB"
+msgstr ""
+
 msgid "Post #"
 msgstr "Utáni #"
 
@@ -551,9 +579,6 @@ msgstr "Kvótahiba (%s)."
 msgid "Quota failure (%s)."
 msgstr "Kvótahiba (%s)."
 
-msgid "Running in non UTF-8 locale. Setup is unsupported."
-msgstr "Futtatás nem UTF-8 területi beállítással. A beállítás nem támogatott."
-
 msgid "See 'man snapper' for further instructions."
 msgstr "További útmutatásért lásd: 'man snapper'."
 
@@ -574,6 +599,10 @@ msgstr "Alkötet"
 
 msgid "The config 'root' does not exist. Likely snapper is not configured."
 msgstr "A 'root' konfiguráció nem létezik. A snapper valószínűleg nincs konfigurálva."
+
+#. TRANSLATORS: symbol for "tebi bytes" (best keep untranslated)
+msgid "TiB"
+msgstr ""
 
 msgid "Try 'snapper --help' for more information."
 msgstr "További információ a 'snapper --help' parancs segítségével érhető el."
@@ -610,6 +639,9 @@ msgstr "Ismeretlen típusú pillanatképek."
 #, c-format
 msgid "Use an integer number from %d to %d."
 msgstr "Használjon %d és %d közötti egész számot."
+
+msgid "Used Space"
+msgstr ""
 
 msgid "User"
 msgstr "Felhasználó"
@@ -667,6 +699,9 @@ msgstr "A root argumentum csak a no-dbus beállítással együtt használható."
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr "használat: snapper [--global-options] <parancs> [--command-options] [command-arguments]"
 
+#~ msgid "Running in non UTF-8 locale. Setup is unsupported."
+#~ msgstr "Futtatás nem UTF-8 területi beállítással. A beállítás nem támogatott."
+
 # SLE12
 #~ msgid "Command '%s' does not work without DBus."
 #~ msgstr "A(z) „%s” parancs a DBus nélkül nem működik."
@@ -680,9 +715,6 @@ msgstr "használat: snapper [--global-options] <parancs> [--command-options] [co
 
 #~ msgid "Use an integer number from %d to %d"
 #~ msgstr "Használjon egy %d és %d közötti egész számot"
-
-#~ msgid "\t--disable-filters\t\tDisable filters."
-#~ msgstr "\t--disable-filters\t\tSzűrők letiltása."
 
 #~ msgid "Command failed (%s). See log for more information."
 #~ msgstr "A parancs végrehajtása sikertelen (%s). További információ a log fájlban található."
