--- a/po/ku.po
+++ b/po/ku.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: memory.ku.po\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-20 14:05+0200\n"
+"POT-Creation-Date: 2018-10-02 12:19+0200\n"
 "PO-Revision-Date: 2005-09-23 00:15+0200\n"
 "Last-Translator: Kurdish Team <i18n@suse.de>\n"
 "Language-Team: Kurdish Team <i18n@suse.de>\n"
@@ -24,7 +24,7 @@ msgstr ""
 msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
 msgstr ""
 
-msgid "\t--command <command>\tRun command and create pre and post snapshots."
+msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
 msgstr ""
 
 msgid "\t--config, -c <name>\t\tSet name of config to use."
@@ -37,6 +37,9 @@ msgid "\t--description, -d <description>\tDescription for snapshots."
 msgstr ""
 
 msgid "\t--diff-cmd <command>\t\tCommand used for comparing files."
+msgstr ""
+
+msgid "\t--disable-used-space\t\tDisable showing used space."
 msgstr ""
 
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
@@ -259,6 +262,10 @@ msgstr "Pakêta '%s' nehat dîtin."
 msgid "ACL error."
 msgstr "Çewtiyên &Rojnivîsk"
 
+#. TRANSLATORS: symbol for "bytes" (best keep untranslated)
+msgid "B"
+msgstr ""
+
 #, fuzzy
 msgid "Cleanup"
 msgstr "Paqij Bike"
@@ -403,6 +410,10 @@ msgstr "Daxwiyanî"
 msgid "Detecting filesystem type failed."
 msgstr ""
 
+#. TRANSLATORS: symbol for "exbi bytes" (best keep untranslated)
+msgid "EiB"
+msgstr ""
+
 #, fuzzy
 msgid "Empty configdata."
 msgstr "Hê nehatiye veavakirin."
@@ -431,6 +442,10 @@ msgstr "Têkçûn"
 #, fuzzy, c-format
 msgid "File '%s' not found."
 msgstr "Pel nehat dîtin."
+
+#. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
+msgid "GiB"
+msgstr ""
 
 #, fuzzy, c-format
 msgid "IO Error (%s)."
@@ -477,11 +492,19 @@ msgstr ""
 msgid "Key"
 msgstr "Mifte"
 
+#. TRANSLATORS: symbol for "kibi bytes" (best keep untranslated)
+msgid "KiB"
+msgstr ""
+
 #, fuzzy, c-format
 msgid "Listing configs failed (%s)."
 msgstr "Nivîsandina mîhengan têk çû"
 
 msgid "Maybe you forgot the delimiter '..' between the snapshot numbers."
+msgstr ""
+
+#. TRANSLATORS: symbol for "mebi bytes" (best keep untranslated)
+msgid "MiB"
 msgstr ""
 
 #, c-format
@@ -512,6 +535,10 @@ msgstr "Destûr"
 msgid "Opening file '%s' failed."
 msgstr "Pel tê vekirin..."
 
+#. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
+msgid "PiB"
+msgstr ""
+
 msgid "Post #"
 msgstr ""
 
@@ -534,9 +561,6 @@ msgstr "Çewtî"
 msgid "Quota failure (%s)."
 msgstr "Têkçûn"
 
-msgid "Running in non UTF-8 locale. Setup is unsupported."
-msgstr ""
-
 msgid "See 'man snapper' for further instructions."
 msgstr ""
 
@@ -557,6 +581,10 @@ msgid "Subvolume"
 msgstr "&Deng"
 
 msgid "The config 'root' does not exist. Likely snapper is not configured."
+msgstr ""
+
+#. TRANSLATORS: symbol for "tebi bytes" (best keep untranslated)
+msgid "TiB"
 msgstr ""
 
 msgid "Try 'snapper --help' for more information."
@@ -593,6 +621,9 @@ msgstr ""
 
 #, c-format
 msgid "Use an integer number from %d to %d."
+msgstr ""
+
+msgid "Used Space"
 msgstr ""
 
 msgid "User"
