--- a/po/nl.po
+++ b/po/nl.po
@@ -9,11 +9,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-20 14:05+0200\n"
+"POT-Creation-Date: 2018-10-02 12:19+0200\n"
 "PO-Revision-Date: 2018-04-20 17:22+0000\n"
 "Last-Translator: Freek de Kruijf <freek@opensuse.org>\n"
-"Language-Team: Dutch <https://l10n.opensuse.org/projects/snapper/master/nl/>"
-"\n"
+"Language-Team: Dutch <https://l10n.opensuse.org/projects/snapper/master/nl/>\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -30,7 +29,8 @@ msgstr "\t--cleanup-algorithm, -c <algo>\tOpschoonalgoritme voor momentopname."
 msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
 msgstr "\t--cleanup-algorithm, -c <algo>\tOpschoonalgoritme voor momentopnamen."
 
-msgid "\t--command <command>\tRun command and create pre and post snapshots."
+#, fuzzy
+msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
 msgstr "\t--command <command>\tVoer opdracht uit en maak pre- en post-momentopnamen."
 
 msgid "\t--config, -c <name>\t\tSet name of config to use."
@@ -44,6 +44,10 @@ msgstr "\t--description, -d <description>\tBeschrijving van momentopnamen."
 
 msgid "\t--diff-cmd <command>\t\tCommand used for comparing files."
 msgstr "\t--diff-cmd <command>\t\tOpdracht gebruikt voor het vergelijken van bestanden."
+
+#, fuzzy
+msgid "\t--disable-used-space\t\tDisable showing used space."
+msgstr "\t--disable-filters\t\tFilters uitschakelen."
 
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
 msgstr "\t--extensions, -x <options>\tExtra opties doorgeven aan de opdracht diff."
@@ -257,6 +261,10 @@ msgstr "(Momentopname %d.)"
 msgid "ACL error."
 msgstr "ACL-fout."
 
+#. TRANSLATORS: symbol for "bytes" (best keep untranslated)
+msgid "B"
+msgstr ""
+
 msgid "Cleanup"
 msgstr "Opschonen"
 
@@ -301,8 +309,7 @@ msgstr "Opdracht 'mount' heeft minstens één argument."
 
 #, c-format
 msgid "Command 'rollback' cannot be used on a non-root subvolume %s."
-msgstr ""
-"Opdracht 'rollback' kan niet gebruikt worden op een niet-root subvolume %s."
+msgstr "Opdracht 'rollback' kan niet gebruikt worden op een niet-root subvolume %s."
 
 msgid "Command 'rollback' only available for btrfs."
 msgstr "Opdracht 'rollback' is alleen beschikbaar voor btrfs."
@@ -395,6 +402,10 @@ msgstr "Beschrijving"
 msgid "Detecting filesystem type failed."
 msgstr "Type bestandssysteem detecteren is mislukt."
 
+#. TRANSLATORS: symbol for "exbi bytes" (best keep untranslated)
+msgid "EiB"
+msgstr ""
+
 msgid "Empty configdata."
 msgstr "Lege configuratiegegevens."
 
@@ -421,6 +432,10 @@ msgstr "Mislukking (%s)."
 #, c-format
 msgid "File '%s' not found."
 msgstr "Bestand '%s' niet gevonden."
+
+#. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
+msgid "GiB"
+msgstr ""
 
 #, c-format
 msgid "IO Error (%s)."
@@ -465,12 +480,20 @@ msgstr "Ongeldige gebruikersgegevens."
 msgid "Key"
 msgstr "Sleutel"
 
+#. TRANSLATORS: symbol for "kibi bytes" (best keep untranslated)
+msgid "KiB"
+msgstr ""
+
 #, c-format
 msgid "Listing configs failed (%s)."
 msgstr "Lijst maken van configuraties is mislukt (%s)."
 
 msgid "Maybe you forgot the delimiter '..' between the snapshot numbers."
 msgstr "Misschien bent u het scheidingsteken '..' tussen de snapshotnummer vergeten."
+
+#. TRANSLATORS: symbol for "mebi bytes" (best keep untranslated)
+msgid "MiB"
+msgstr ""
 
 #, c-format
 msgid "Missing argument for command option '%s'."
@@ -499,6 +522,10 @@ msgstr "Geen toegangsrechten."
 msgid "Opening file '%s' failed."
 msgstr "Openen van bestand '%s' is mislukt."
 
+#. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
+msgid "PiB"
+msgstr ""
+
 msgid "Post #"
 msgstr "Post #"
 
@@ -519,9 +546,6 @@ msgstr "Qouta-fout (%s)."
 msgid "Quota failure (%s)."
 msgstr "Quota-mislukking (%s)."
 
-msgid "Running in non UTF-8 locale. Setup is unsupported."
-msgstr "Uitvoering in niet UTF-8 locale. Instelling wordt niet ondersteund."
-
 msgid "See 'man snapper' for further instructions."
 msgstr "Zie 'man snapper' voor meer instructies."
 
@@ -541,6 +565,10 @@ msgstr "Subvolume"
 
 msgid "The config 'root' does not exist. Likely snapper is not configured."
 msgstr "De 'root' van de configuratie bestaat niet. Waarschijnlijk is snapper niet geconfigureerd."
+
+#. TRANSLATORS: symbol for "tebi bytes" (best keep untranslated)
+msgid "TiB"
+msgstr ""
 
 msgid "Try 'snapper --help' for more information."
 msgstr "Probeer 'snapper --help' voor meer informatie."
@@ -576,6 +604,9 @@ msgstr "Onbekend type momentopnamen."
 #, c-format
 msgid "Use an integer number from %d to %d."
 msgstr "Gebruik een geheel getal van %d tot %d."
+
+msgid "Used Space"
+msgstr ""
 
 msgid "User"
 msgstr "Gebruiker"
@@ -631,6 +662,9 @@ msgstr "rootargument kan alleen samen worden gebruikt met no-dbus."
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr "gebruik: snapper [--global-options] <opdracht> [--commando-options] [commando-arguments]"
 
+#~ msgid "Running in non UTF-8 locale. Setup is unsupported."
+#~ msgstr "Uitvoering in niet UTF-8 locale. Instelling wordt niet ondersteund."
+
 #~ msgid "Command '%s' does not work without DBus."
 #~ msgstr "Opdracht '%s' werkt niet zonder D-Bus."
 
@@ -640,9 +674,6 @@ msgstr "gebruik: snapper [--global-options] <opdracht> [--commando-options] [com
 
 #~ msgid "Unknown file."
 #~ msgstr "Onbekend bestand."
-
-#~ msgid "\t--disable-filters\t\tDisable filters."
-#~ msgstr "\t--disable-filters\t\tFilters uitschakelen."
 
 #~ msgid "Command failed (%s). See log for more information."
 #~ msgstr "Commando is mislukt (%s). Zie log voor meer informatie."
