--- a/po/sv.po
+++ b/po/sv.po
@@ -8,11 +8,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-20 14:05+0200\n"
+"POT-Creation-Date: 2018-10-02 12:19+0200\n"
 "PO-Revision-Date: 2018-04-23 17:33+0000\n"
 "Last-Translator: Martin Devenney <devenneymartin@gmail.com>\n"
-"Language-Team: Swedish "
-"<https://l10n.opensuse.org/projects/snapper/master/sv/>\n"
+"Language-Team: Swedish <https://l10n.opensuse.org/projects/snapper/master/sv/>\n"
 "Language: sv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -32,7 +31,8 @@ msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
 msgstr "\t--cleanup-algorithm, -c <algo>\tUpprensningsalgoritm för ögonblicksbilder."
 
 # SLE12
-msgid "\t--command <command>\tRun command and create pre and post snapshots."
+#, fuzzy
+msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
 msgstr "\t--command <kommando>\tKör kommandot och skapa före- och efter-ögonblicksbilder."
 
 # SLE12
@@ -49,6 +49,9 @@ msgstr "\t--description, -d <beskrivning>\tBeskrivning för ögonblicksbilder."
 
 msgid "\t--diff-cmd <command>\t\tCommand used for comparing files."
 msgstr "\t--diff-cmd <command>\t\tKommandot används för att jämföra filer."
+
+msgid "\t--disable-used-space\t\tDisable showing used space."
+msgstr ""
 
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
 msgstr "\t--extensions, -x <options>\tExtra alternativ skickades till diffkommandot."
@@ -324,6 +327,10 @@ msgstr "(Ögonblicksbild %d.)"
 msgid "ACL error."
 msgstr "ACL-fel."
 
+#. TRANSLATORS: symbol for "bytes" (best keep untranslated)
+msgid "B"
+msgstr ""
+
 # SLE12
 msgid "Cleanup"
 msgstr "Upprensning"
@@ -383,9 +390,7 @@ msgstr "Kommandot mount måste ha minst ett argument."
 # SLE12
 #, c-format
 msgid "Command 'rollback' cannot be used on a non-root subvolume %s."
-msgstr ""
-"Kommandot \"rollback\" kan inte användas på en undervolym %s som inte är en "
-"rot."
+msgstr "Kommandot \"rollback\" kan inte användas på en undervolym %s som inte är en rot."
 
 # SLE12
 msgid "Command 'rollback' only available for btrfs."
@@ -503,6 +508,10 @@ msgstr "Beskrivning"
 msgid "Detecting filesystem type failed."
 msgstr "Det gick inte att identifiera filsystemstypen."
 
+#. TRANSLATORS: symbol for "exbi bytes" (best keep untranslated)
+msgid "EiB"
+msgstr ""
+
 # SLE12
 msgid "Empty configdata."
 msgstr "Tomma konfigurationsdata."
@@ -535,6 +544,10 @@ msgstr "Fel (%s)."
 #, c-format
 msgid "File '%s' not found."
 msgstr "Filen %s hittades inte."
+
+#. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
+msgid "GiB"
+msgstr ""
 
 #, c-format
 msgid "IO Error (%s)."
@@ -590,6 +603,10 @@ msgstr "Ogiltiga användardata."
 msgid "Key"
 msgstr "Nyckel"
 
+#. TRANSLATORS: symbol for "kibi bytes" (best keep untranslated)
+msgid "KiB"
+msgstr ""
+
 # SLE12
 #, c-format
 msgid "Listing configs failed (%s)."
@@ -597,6 +614,10 @@ msgstr "Listningen av konfigurationer misslyckades (%s)."
 
 msgid "Maybe you forgot the delimiter '..' between the snapshot numbers."
 msgstr "Kanske glömde du avgränsaren '..' mellan snapshot-numren."
+
+#. TRANSLATORS: symbol for "mebi bytes" (best keep untranslated)
+msgid "MiB"
+msgstr ""
 
 # SLE12
 #, c-format
@@ -632,6 +653,10 @@ msgstr "Ingen behörighet."
 msgid "Opening file '%s' failed."
 msgstr "Det gick inte att öppna filen %s."
 
+#. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
+msgid "PiB"
+msgstr ""
+
 # SLE12
 msgid "Post #"
 msgstr "Efter #"
@@ -657,9 +682,6 @@ msgstr "Kvotfel (%s)."
 msgid "Quota failure (%s)."
 msgstr "Kvotfel (%s)."
 
-msgid "Running in non UTF-8 locale. Setup is unsupported."
-msgstr "Körs på en plats som inte är UTF-8. Inställningarna stöds inte."
-
 msgid "See 'man snapper' for further instructions."
 msgstr "Se 'man snapper' för mer instruktioner."
 
@@ -683,6 +705,10 @@ msgstr "Undervolym"
 
 msgid "The config 'root' does not exist. Likely snapper is not configured."
 msgstr "Konfig. 'root' existerar inte. Troligtvis är inte snapper konfigurerad."
+
+#. TRANSLATORS: symbol for "tebi bytes" (best keep untranslated)
+msgid "TiB"
+msgstr ""
 
 # SLE12
 msgid "Try 'snapper --help' for more information."
@@ -727,6 +753,9 @@ msgstr "Okända typer av ögonblicksbilder."
 #, c-format
 msgid "Use an integer number from %d to %d."
 msgstr "Använd ett heltal från %d till %d."
+
+msgid "Used Space"
+msgstr ""
 
 # SLE12
 msgid "User"
@@ -794,6 +823,9 @@ msgstr "Rotargument kan enbart användas tillsammans med no-dbus."
 # SLE12
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr "usage: snapper [--globala alternativ] <kommando> [--kommandoalternativ] [kommandoargument]"
+
+#~ msgid "Running in non UTF-8 locale. Setup is unsupported."
+#~ msgstr "Körs på en plats som inte är UTF-8. Inställningarna stöds inte."
 
 # SLE12
 #~ msgid "Command '%s' does not work without DBus."
